syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.example.departmentapp";

message UserRequestGrpc {
  int32 id = 1;
  string firstName = 2;
  string lastName = 3;
}

message UserResponseGrpc {
  int32 id = 1;
  string firstName = 2;
  string lastName = 3;
  string gender = 4;
  int32 age = 5;
}

service UserServiceGrpc {
  rpc getUser(UserRequestGrpc) returns (UserResponseGrpc);
}
