syntax = "proto3";
package com.example.grpc;

message GrpcUserRequest {
  int32 id = 1;
}

message GrpcUserResponse {
  int32 id = 1;
  string firstName = 3;
  string lastName = 4;
  int32 age = 5;
}

service UserService {
  rpc getUser(GrpcUserRequest) returns (GrpcUserResponse);
}